--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "intl.webpack.config.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/babel -s -d . src",
-    "lint": "./node_modules/.bin/eslint .",
+    "lint": "./node_modules/.bin/eslint src",
     "test": "npm run lint"
   },
   "repository": {
@@ -27,14 +27,19 @@
     "webpack-partial": "^2.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-preset-metalab": "^0.1.4",
-    "eslint": "^1.10.3",
-    "eslint-config-metalab": "^1.0.0-rc.4",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-preset-metalab": "^0.2.1",
+    "eslint": "^2.10.2",
+    "eslint-config-metalab": "^4.0.1",
+    "eslint-import-resolver-babel-module": "^2.0.1",
     "eslint-plugin-filenames": "^0.2.0",
-    "eslint-plugin-import": "^0.11.0",
-    "eslint-plugin-react": "^3.11.2"
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-lodash-fp": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
+    "intl": ">=1.0.0",
+    "react-intl": ">=2.0.0",
+    "webpack": "^2.2.1"
   },
   "peerDependencies": {
     "intl": ">=1.0.0",
